// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has correct values matches snapshot 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"> <span class="badge__content__label badge__content__label--none badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span>
  <!----></span>
</div>
`;

exports[`has correct values should match classes 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"> <span class="badge__content__label badge__content__label--none badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span>
  <!----></span>
</div>
`;

exports[`matches snapshot 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"> <span class="badge__content__label badge__content__label--none badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span>
  <!----></span>
</div>
`;

exports[`test the icon positions when both prefix and suffix slot it's used should match classes 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"><svg></svg> <span class="badge__content__label badge__content__label--both badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span> <svg></svg></span></div>
`;

exports[`test the icon positions when deletable should match classes 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"> <span class="badge__content__label badge__content__label--right badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span>
  <icon-mono-close-stub class="badge__content__delete has-tooltip" data-original-title="null"></icon-mono-close-stub>
  </span>
</div>
`;

exports[`test the icon positions when prefix slot it's used should match classes 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"><svg></svg> <span class="badge__content__label badge__content__label--left badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span>
  <!----></span>
</div>
`;

exports[`test the icon positions when suffix slot it's used should match classes 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(0, 0, 0, 0.1);"> <span class="badge__content__label badge__content__label--right badge__content__label--capitalize has-tooltip" style="color: rgb(0, 0, 0);" data-original-title="null">
      foo
    </span> <svg></svg></span></div>
`;

exports[`when highContrast matches snapshot 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo badge__content--high-contrast" style="background-color: rgb(255, 182, 73);"> <span class="badge__content__label badge__content__label--none badge__content__label--capitalize has-tooltip" style="color: rgb(255, 255, 255);" data-original-title="null">
      foo
    </span>
  <!----></span>
</div>
`;

exports[`when not highContrast matches snapshot 1`] = `
<div class="badge"><span class="badge__content badge__content--size--small badge__content--foo" style="background-color: rgba(255, 182, 73, 0.1);"> <span class="badge__content__label badge__content__label--none badge__content__label--capitalize has-tooltip" style="color: rgb(255, 182, 73);" data-original-title="null">
      foo
    </span>
  <!----></span>
</div>
`;
